Trying again, to avoid modifying line endings. TRUNK-3804 - Merge Patients ignores visits (also, increase memory when running unit tests)