@@ -649,6 +649,11 @@
 				<artifactId>powermock-api-mockito</artifactId>
 				<version>1.4.10</version>
 			</dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-all</artifactId>
+                <version>1.3</version>
+            </dependency>
 			<dependency>
 				<groupId>org.databene</groupId>
 				<artifactId>databene-benerator</artifactId>
@@ -933,7 +938,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<argLine>-Duser.language=en -Duser.region=US ${customArgLineForTesting}</argLine>
+					<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
